[metadata]
name = smlm-dl
version = 0.0.1
author = Kenny Kwok Hin Chung
author_email = kenny.chung@yale.edu
description = Deep learning network for image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kkhchung/smlm-dl

[options]
python_requires = >=3.6